<resources>
    <string name="app_name">FallingWordsGame</string>

    <!-- WelcomeView layout -->
    <string name="start_btn_text">Start!</string>
    <string name="player_name">Name: </string>
    <string name="game_title">My Falling Words</string>

    <!-- Game layout-->

    <string name="wrong_score">Wrong : %1$d! </string>
    <string name="correct_score">Correct : %1$d! </string>
    <string name="player_message">Hello, %1$s!</string>

</resources>
