<?xml version="1.0" encoding="utf-8"?>
<com.example.raf0c.fallingwordsgame.views.WelcomeView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        android:typeface="monospace" />

    <LinearLayout
        android:id="@+id/player_name_layout"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_name"
            android:typeface="monospace" />
        <EditText
            android:id="@+id/player_name"
            android:layout_width="@dimen/max_name_width"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:text="@string/start_btn_text"
        android:typeface="monospace" />

</com.example.raf0c.fallingwordsgame.views.WelcomeView>